# bevy_spacesim

./: .gitignore  Cargo.toml  README.md  precision_demo  precision_demo.rs  verify_integration.sh
assets/: .gitignore
src/: lib.rs  main.rs  ops.rs
src/plugins/: camera.rs  lighting.rs  mod.rs  planet.rs  spaceship.rs  starfield.rs
tests/: big_space_integration.rs
