[package]
name = "bevy_spacesim"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["webgl2"] }
noise = "0.9.0"
rand = "0.9.1"
# big_space = "0.9.1"
big_space = { git = "https://github.com/fractaloop/big_space", branch = "bevy-0.16.0" }

[profile.dev]
opt-level = 1

# Higher optimization level for dependencies like bevy
[profile.dev.package."*"]
opt-level = 3
