[package]
name = "bevy_spacesim"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["webgl2"] }
big_space = { version = "0.10.0", features = ["camera"] }
noise = "0.9.0"
rand = "0.9.1"

[profile.dev]
opt-level = 1

# Higher optimization level for dependencies like bevy
[profile.dev.package."*"]
opt-level = 3
